--- a/shop_account/templates/base.html
+++ b/shop_account/templates/base.html
@@ -14,20 +14,20 @@
 
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'user_top' %}">django-account</a></h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'shopper_top' %}">django-account</a></h5>
 
         <nav class="my-2 my-md-0 mr-md-3">
             {% if user.is_authenticated %}
-            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'accounts:profile' %}">マイページ</a>
+            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'shop-accounts:profile' %}">マイページ</a>
             {% else %}
-            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'user_top' %}">ユーザー登録はこちら</a>
-            <a class="btn btn-outline-primary btn-sm" href="#">店舗登録はこちら</a>
+            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'login' %}">ログイン</a>
+            <a class="btn btn-outline-primary btn-sm" href="{% url 'shop-accounts:signup' %}">入会</a>
             {% endif %}
         </nav>
     </div>
 
     <div class="container mt-3">
-        <p>登録画面</p>
+        {% block body %}{% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
