GroupとPermissionフィールドのReverse Accessorが衝突する問題を修正

--- a/account/templates/top.html
+++ b/account/templates/top.html
@@ -21,7 +21,7 @@
             <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'accounts:profile' %}">マイページ</a>
             {% else %}
             <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'user_top' %}">ユーザー登録はこちら</a>
-            <a class="btn btn-outline-primary btn-sm" href="#">店舗登録はこちら</a>
+            <a class="btn btn-outline-primary btn-sm" href="{% url 'shopper_top' %}">店舗登録はこちら</a>
             {% endif %}
         </nav>
     </div>
