一つのUserモデルでいろいろ実装

--- a/account/templates/registration/profile.html
+++ b/account/templates/registration/profile.html
@@ -5,14 +5,6 @@
 <table class="table borderless">
     <tbody>
         <tr>
-            <th scope="row">gender</th>
-            <td>{{ user.get_gender_display }}</td>
-        </tr>
-        <tr>
-            <th scope="row">age</th>
-            <td>{{ user.age }}</td>
-        </tr>
-        <tr>
             <th scope="row">E-mail</th>
             <td>{{ user.email }}</td>
         </tr>
@@ -20,6 +12,30 @@
             <th scope="row">入会日</th>
             <td>{{ user.date_joined }}</td>
         </tr>
+        {% if profile_type == 'Customer' %}
+        <tr>
+            <th scope="row">苗字</th>
+            <td>{{ profile.last_name }}</td>
+        </tr> 
+        <tr>
+            <th scope="row">名前</th>
+            <td>{{ profile.first_name }}</td>
+        </tr>
+        <tr>
+            <th scope="row">性別</th>
+            <td>{{ profile.gender }}</td>
+        </tr>
+        <tr>
+            <th scope="row">年齢</th>
+            <td>{{ profile.age }}</td>
+        </tr>
+        {% endif %}
+        {% if profile_type == 'Shop' %}
+        <tr>
+            <th scope="row">店舗名</th>
+            <td>{{ profile.shop_name }}</td>
+        </tr>
+        {% endif %}
     </tbody>
     <a class="btn btn-outline-primary btn-sm" href="#">変更</a>
 </table>
