--- a/account/templates/registration/delete_confirm.html
+++ b/account/templates/registration/delete_confirm.html
@@ -5,6 +5,10 @@
 {% block content %}
 
     <p>アカウントを削除します。よろしいですか?</p>
+    <form action="" method="post">
+        <button type="submit" class="btn btn-danger">はい</button>
+        {% csrf_token %}
+    </form>
     <a class="btn btn-danger" href="{% url 'accounts:delete-complete' %}">はい</a>
 
 {% endblock %}
