小さな変更

--- a/account/templates/registration/profile.html
+++ b/account/templates/registration/profile.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
             <th scope="row">性別</th>
-            <td>{{ profile.gender }}</td>
+            <td>{{ profile.get_gender_display }}</td>
         </tr>
         <tr>
             <th scope="row">年齢</th>
