--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap4 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,18 +14,7 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'user_top' %}">django-account</a></h5>
-
-        <nav class="my-2 my-md-0 mr-md-3">
-            {% if user.is_authenticated %}
-            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'accounts:profile' %}">マイページ</a>
-            {% else %}
-            <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'login' %}">ログイン</a>
-            <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:signup' %}">入会</a>
-            {% endif %}
-        </nav>
-    </div>
+    {% block body_header %}{% endblock %}
 
     <div class="container mt-3">
         {% block body %}{% endblock %}
