--- a/account/templates/base_centered.html
+++ b/account/templates/base_centered.html
@@ -1,17 +1,25 @@
 {% extends "base.html" %}
 
+{% block body_header %}
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <form>{% csrf_token %}
+        <input class="btn btn-outline-primary btn-sm mr-2" type="button" value="戻る" onClick="history.back()">
+    </form>
+</div>
+{% endblock %}
+
 {% block body %}
-    
-    <div class="row text-center">
-        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card card-signin my-5">
-                <div class="card-body">
 
-                    {% block content %}{% endblock %}
+<div class="row text-center">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+            <div class="card-body">
 
-                </div>
+                {% block content %}{% endblock %}
+
             </div>
         </div>
     </div>
+</div>
 
 {% endblock %}
