--- a/account/templates/registration/shop_profile.html
+++ b/account/templates/registration/shop_profile.html
@@ -5,6 +5,10 @@
 <table class="table borderless">
     <tbody>
         <tr>
+            <th scope="row">username</th>
+            <td>{{ user.username }}</td>
+        </tr>
+        <tr>
             <th scope="row">E-mail</th>
             <td>{{ user.email }}</td>
         </tr>
