--- a/account/templates/registration/subnav.html
+++ b/account/templates/registration/subnav.html
@@ -1,4 +1,5 @@
 <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a href="{% url 'accounts:qrcode' %}">自分のQRコードを表示</a></li>
     <li class="list-group-item"><a href="{% url 'accounts:point_card_list' %}">ポイントカード</a></li>
     <li class="list-group-item"><a href="{% url 'accounts:profile' %}">プロフィール</a></li>
     <li class="list-group-item"><a href="{% url 'password_change' %}">パスワードの変更</a></li>
