--- a/account/templates/account/process_qr_code.html
+++ b/account/templates/account/process_qr_code.html
@@ -1,10 +1,13 @@
 {% if qr.user_type == 'Customer' %}
-{% if qr.action == None %}
-<a>link for customer</a>
+{% if 'cashier' in qr.action %}
+<a href="{% url 'accounts:cashier' qr.pk %}">会計する</a>
+{% endif %}
+{% if 'add_point' in qr.action %}
+<a href="{% url 'accounts:add_point' qr.pk %}">ポイントを付与する</a>
 {% endif %}
 {% endif %}
 {% if qr.user_type == 'Shop' %}
-{% if qr.action == None %}
+{% if 'make_point_card' in qr.action %}
 <a>link for shop</a>
 {% endif %}
 {% endif %}
