--- a/account/templates/account/process_qr_code.html
+++ b/account/templates/account/process_qr_code.html
@@ -5,6 +5,12 @@
 {% if 'add_point' in qr.action %}
 <a href="{% url 'accounts:add_point' qr.pk %}">ポイントを付与する</a>
 {% endif %}
+{% if 'add_stamp' in qr.action %}
+<a href="{% url 'add_stamp' qr.pk %}">スタンプを押す</a>
+{% endif %}
+{% if 'use_point' in qr.action %}
+<a href="{% url 'use_point' qr.pk %}">ポイントを使用する</a>
+{% endif %}
 {% if 'use_stamp' in qr.action %}
 <a href="{% url 'accounts:use_stamp' qr.pk %}">スタンプを使用する</a>
 {% endif %}
