'フロントの変更、qrコードとポイントカード作成にエラーあり'

--- a/account/templates/account/add_stamp.html
+++ b/account/templates/account/add_stamp.html
@@ -1,5 +1,10 @@
+{% extends 'registration/base.html' %}
+
+{% block body %}
+
 <form method="POST">
-{% csrf_token %}
-{{form}}
-<button type="submit">スタンプを押す</button>
+    {% csrf_token %}
+    {{form}}
+    <button type="submit">スタンプを押す</button>
 </form>
+{% endblock %}
