--- a/account/templates/account/delete_point_card_complete.html
+++ b/account/templates/account/delete_point_card_complete.html
@@ -1,2 +1,6 @@
+{% extends 'registration/base.html' %}
+
+{% block body %}
 <p>ポイントカードを消去しました</p>
-<a href="{% url 'accounts:profile' %}">マイページへ</a>
+<a href="{% url 'accounts:mypage' %}">マイページへ</a>
+{% endblock %}
