--- a/account/templates/account/make_point_card_fail.html
+++ b/account/templates/account/make_point_card_fail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 
 {% block body %}
 
@@ -20,5 +20,5 @@
 <p><a href="{% url 'accounts:point_card_detail' pointcard.pk %}">{{pointcard.shop}}</a></p>
 {% endfor %}
 
-{% endblock %} 
-{% endblock %} 
+{% endblock %}
+{% endblock %}
