--- a/account/templates/account/use_stamp.html
+++ b/account/templates/account/use_stamp.html
@@ -1,6 +1,10 @@
+{% extends 'registration/base.html' %}
+
+{% block body %}
 <p>{{stamps_point_card_has}}</p>
 <form method="POST">
-{% csrf_token %}
-{{form}}
-<button type="submit">使う</button>
+    {% csrf_token %}
+    {{form}}
+    <button type="submit">使う</button>
 </form>
+{% endblock %}
