--- a/account/templates/account/add_point.html
+++ b/account/templates/account/add_point.html
@@ -1,5 +1,9 @@
+{% extends 'registration/base.html' %}
+
+{% block body %}
 <form method="POST">
-{% csrf_token %}
-{{form}}
-<button type="submit">付与</button>
+    {% csrf_token %}
+    {{form}}
+    <button type="submit">付与</button>
 </form>
+{% endblock %}
