--- a/account/templates/account/point_card_detail.html
+++ b/account/templates/account/point_card_detail.html
@@ -1,25 +1,26 @@
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
+
 {% block body %}
 <p>{{type}}</p>
 <table>
-<tbody>
-<tr>
-    <th>店舗名</th>
-    <td>{{object.shop}}</td>
-</tr>
-{% if object.has_point %}
-<tr>
-    <th>ポイント</th>
-    <td>{{object.point}}</td>
-</tr>
-{% endif %}
-{% if object.has_stamp %}
-<tr>
-    <th>スタンプ数</th>
-    <td>{{object.number_of_stamps}}</td>
-</tr>
-{% endif %}
-</tbody>
+    <tbody>
+        <tr>
+            <th>店舗名</th>
+            <td>{{object.shop}}</td>
+        </tr>
+        {% if object.has_point %}
+        <tr>
+            <th>ポイント</th>
+            <td>{{object.point}}</td>
+        </tr>
+        {% endif %}
+        {% if object.has_stamp %}
+        <tr>
+            <th>スタンプ数</th>
+            <td>{{object.number_of_stamps}}</td>
+        </tr>
+        {% endif %}
+    </tbody>
 </table>
 <a href="{% url 'accounts:delete_point_card' object.pk %}">このポイントカードを消去</a>
 {% endblock body %}
