--- a/account/templates/customer_top.html
+++ b/account/templates/customer_top.html
@@ -6,8 +6,6 @@
 
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
-        <a class="btn btn-outline-primary btn-sm mr-2" href="#">マイページ</a>
-        <!--#={% url 'accounts:profile' %}-->
         {% else %}
         <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'login' %}">ログイン</a>
         <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:customer_signup' %}">入会</a>
@@ -18,6 +16,8 @@
 
 {% block body %}
 
-<p>トップページ</p>
+<div class="list-group-item">
+    <a href="{% url 'accounts:point_card_list' %}">ポイントカード</a>
+</div>
 
 {% endblock %}
