--- a/account/templates/registration/mypage.html
+++ b/account/templates/registration/mypage.html
@@ -1,6 +1,9 @@
+{% extends "registration/base.html" %}
+{% block content %}
 <ul class="list-group list-group-flush">
-    <li class="list-group-item"><a href="{% url 'accounts:point_card_list' %}">ポイントカード</a></li>
+    <li class="list-group-item"><a href="{% url 'accounts:profile' %}">プロフィール</a></li>
     <li class="list-group-item"><a href="{% url 'password_change' %}">パスワードの変更</a></li>
     <li class="list-group-item"><a href="{% url 'logout' %}">ログアウト</a></li>
     <li class="list-group-item"><a href="{% url 'accounts:delete-confirmation' %}">退会</a></li>
 </ul>
+{% endblock %}
