QR出ないバグの修正

--- a/account/templates/account/qrcode.html
+++ b/account/templates/account/qrcode.html
@@ -1,16 +1,20 @@
 {% extends 'registration/base.html' %}
+
 {% block content %}
 <div class='row'>
   <div id="img-qr" style="object-fit:cover;"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
   <script>
-    $(function () {
+    jQuery(function($){
+      wid = ($(window).width())/2;
+      hei = ($(window).height())/2;
       var qrtext = '{{ data }}'
       console.log(qrtext);
-      $("#img-qr").html("");
+      $("#img-qr").html();
       $("#img-qr").qrcode({ width: 160, height: 160, text: qrtext });
     });
   </script>
 </div>
 {% endblock %}
+
