--- a/account/templates/account/read_qr_code.html
+++ b/account/templates/account/read_qr_code.html
@@ -3,9 +3,20 @@
 {% block body %}
 
 <body>
+    <video id="camera" width="300" height="300"></video>
+    <canvas id="picture" width="300" height="300" hidden></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        jQuery(function($){
+          var window_camera_center_width = $(window).width()/2 - 150;
+          var window_camera_height = $(window).height()/3;
+          var qrtext = '{{ data }}'
+          $("#camera").offset({top:window_camera_height, left:window_camera_center_width});  
+          $("#picture").offset({top:window_camera_height, left:window_camera_center_width});
+        });
+      </script>
 
-    <video id="camera" width="300" height="200"></video>
-    <canvas id="picture" width="300" height="200" hidden></canvas>
+
     <form style="display: none" action="{% url 'accounts:process_qr_code' %}" method="POST" id="form" , name='form'>
         <input type="hidden" id="data" name="data" value="" />
     </form>
