'フロントの変更'

--- a/account/templates/account/delete_point_card_complete.html
+++ b/account/templates/account/delete_point_card_complete.html
@@ -1,6 +1,5 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 
 {% block body %}
 <p>ポイントカードを消去しました</p>
-<a href="{% url 'accounts:mypage' %}">マイページへ</a>
 {% endblock %}
