--- a/account/templates/account/point_card_list.html
+++ b/account/templates/account/point_card_list.html
@@ -1,5 +1,5 @@
-{% extends "registration/base.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block body %}
 <li class="pointcard-item">
     <a href="{% url 'accounts:read_qr_code' %}">ポイントカード作成</a>
 </li>
