--- a/account/templates/registration/delete_complete.html
+++ b/account/templates/registration/delete_complete.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_centered.html" %}
 
 {% load bootstrap4 %}
 
-{% block body %}
+{% block content %}
 
-    <p>アカウントを削除しました。</p>
+<p>アカウントを削除しました。</p>
 
 {% endblock %}
