--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_centered.html" %}
 
-{% block body %}
+{% block content %}
 
-    <p>ログアウトしました。</p>
+<p>ログアウトしました。</p>
 
 {% endblock %}
