--- a/account/templates/registration/password_change_done.html
+++ b/account/templates/registration/password_change_done.html
@@ -1,9 +1,9 @@
-{% extends "registration/base.html" %}
+{% extends "base.html" %}
 
 {% load bootstrap4 %}
 
-{% block content %}
+{% block body %}
 
-    <p>パスワードを変更しました。</p>
+<p>パスワードを変更しました。</p>
 
 {% endblock %}
