--- a/account/templates/registration/profile.html
+++ b/account/templates/registration/profile.html
@@ -1,6 +1,6 @@
-{% extends "registration/base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
+{% block body %}
 
 <table class="table borderless">
     <tbody>
