--- a/account/templates/account/customize_point_card_form.html
+++ b/account/templates/account/customize_point_card_form.html
@@ -1,8 +1,8 @@
-{% extends 'registration/base.html' %}
-{% block content %}
+{% extends 'base.html' %}
+{% block body %}
 <form method='post'>
-{% csrf_token %}
-{{form}}
-<button type='submit'>変更</button>
+    {% csrf_token %}
+    {{form}}
+    <button type='submit'>変更</button>
 </form>
-{% endblock content %}
+{% endblock %}
