--- a/account/templates/account/qrcode.html
+++ b/account/templates/account/qrcode.html
@@ -1,22 +1,21 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
 <div class='row'>
   <div id="img-qr" style="object-fit:cover;"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
   <script>
-    jQuery(function($){
+    jQuery(function ($) {
 
-      var window_qr_center_width = $(window).width()/2 - 80;
-      var window_qr_height = $(window).height()*2/5;
+      var window_qr_center_width = $(window).width() / 2 - 80;
+      var window_qr_height = $(window).height() * 2 / 5;
       var qrtext = '{{ data }}'
       console.log(qrtext);
       $("#img-qr").html("");
       $("#img-qr").qrcode({ width: 160, height: 160, text: qrtext });
-      $("#img-qr").offset({top:window_qr_height, left:window_qr_center_width});  // 座標設定
+      $("#img-qr").offset({ top: window_qr_height, left: window_qr_center_width });  // 座標設定
     });
   </script>
 </div>
 {% endblock %}
-
