--- a/account/templates/base_centered.html
+++ b/account/templates/base_centered.html
@@ -1,14 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_header %}
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <form>{% csrf_token %}
-        <input class="btn btn-outline-primary btn-sm mr-2" type="button" value="戻る" onClick="history.back()">
-    </form>
-</div>
-{% endblock %}
-
-{% block body %}
+{% block login %}
 
 <div class="row text-center">
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
