--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,8 +1,8 @@
-{% extends "registration/base.html" %}
+{% extends "base.html" %}
 
 {% load bootstrap4 %}
 
-{% block content %}
+{% block body %}
 <form action="" method="POST">
     {% bootstrap_form form layout='' %}
     <button type="submit" class="btn btn-primary">変更する</button>
