--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -1,23 +1,7 @@
 {% extends "base.html" %}
 
-{% block body_header %}
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'shop_top' %}">django-account</a></h5>
-
-    <nav class="my-2 my-md-0 mr-md-3">
-        {% if user.is_authenticated %}
-        <a class="btn btn-outline-primary btn-sm mr-2" href="#">マイページ</a>
-        <!--#={% url 'accounts:profile' %}-->
-        {% else %}
-        <a class="btn btn-outline-primary btn-sm mr-2" href="{% url 'login' %}">ログイン</a>
-        <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:shop_signup' %}">入会</a>
-        {% endif %}
-    </nav>
-</div>
-{% endblock %}
-
 {% block body %}
 
-<p>トップページ</p>
+<p>グラフ入れたいねえ</p>
 
 {% endblock %}
