--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 <!doctype html>
-<html lang="ja">
+<html lang="ja" class="h-100">
 
 <head>
     <meta charset="utf-8">
@@ -15,72 +15,62 @@
     <title>point_card</title>
 </head>
 
-<body>
 
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <div class="container-fluid">
-            <h1 class="navbar-brand col-md-3 col-lg-2 me-0 py-3">point card</h1>
-        </div>
-    </header>
 
-    {% if user.is_shop %}
+<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <div class="container-fluid">
-        <div class="row">
+        <h1 class="navbar-brand col-md-3 col-lg-2 me-0 py-3">point card</h1>
+    </div>
+</header>
+
+<body class="h-100">
+    <div class="container-fluid h-100">
+        <div class="row h-100">
+            {% if user.is_shop %}
+
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class='nav-link active' aria-current='page' href="{% url 'shop_top' %}">トップ</a></li>
-                        <li class="nav-item"><a class='nav-link active' href=" {% url 'accounts:qrcode' %}">QRコード</a>
+                        <li class="nav-item"><a class='nav-link' href=" {% url 'accounts:qrcode' %}">QRコード</a>
                         </li>
-                        <li class="nav-item"><a class='nav-link active' href="{% url 'accounts:mypage' %}">マイページ</a>
+                        <li class="nav-item"><a class='nav-link' href="{% url 'accounts:mypage' %}">マイページ</a>
                         </li>
-                        <li class="nav-item"><a class='nav-link active'
+                        <li class="nav-item"><a class='nav-link'
                                 href="{% url 'accounts:customize_point_card' %}">カード編集</a></li>
                     </ul>
                 </div>
             </nav>
-        </div>
-    </div>
-    {% endif %}
+
+            {% endif %}
 
 
-    <main>
-        <div class="container-fluid">
-            {% if user.is_authenticated %}
-            <div class="row text-center">
-                <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                    <div class="card-signin my-5">
-                        <div class="card-body">
+            <main class="col-md-9 mx-auto">
+                {% if user.is_authenticated %}
+                <div class="row text-center">
+                    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                        <div class="card-signin my-5">
+                            <div class="card-body">
 
-                            {% block body %}{% endblock %}
+                                {% block body %}{% endblock %}
 
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            {% else %}
-            <a class="btn btn-outline-primary mr-2" href="{% url 'login' %}">ログイン</a>
-            <a class="btn btn-outline-primary " href="{% url 'accounts:signup' %}">入会</a>
-            {% block login %}
-            {% endblock%}
-            {% endif %}
-
+                {% else %}
+                <a class="btn btn-outline-primary mr-2" href="{% url 'login' %}">ログイン</a>
+                <a class="btn btn-outline-primary " href="{% url 'accounts:signup' %}">入会</a>
+                {% block login %}
+                {% endblock%}
+                {% endif %}
+            </main>
         </div>
-    </main>
+    </div>
 
-    <footer>
-        {% if user.is_customer %}
-        <div class="container">
-            <div class='row bg-dark text-white fixed-bottom no-gutters'>
-                <a class='col text-center py-3' href="{% url 'customer_top' %}"">トップ</a>
-                    <a class='col text-center py-3' href=" {% url 'accounts:qrcode' %}">QRコード</a>
-                <a class='col text-center py-3' href="{% url 'accounts:mypage' %}">マイページ</a>
-            </div>
-        </div>
-        {% endif %}
-    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -94,5 +84,16 @@
 
 
 </body>
+<footer>
+    {% if user.is_customer %}
+    <div class="container">
+        <div class='row bg-dark text-white fixed-bottom no-gutters'>
+            <a class='col text-center py-3' href="{% url 'customer_top' %}"">トップ</a>
+                <a class='col text-center py-3' href=" {% url 'accounts:qrcode' %}">QRコード</a>
+            <a class='col text-center py-3' href="{% url 'accounts:mypage' %}">マイページ</a>
+        </div>
+    </div>
+    {% endif %}
+</footer>
 
 </html>
