--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -2,6 +2,10 @@
 
 {% block body %}
 
+<div class="list-item">
+    <a href="{% url 'accounts:read_qr_code' %}">スキャン</a>
+</div>
+
 <p>グラフ入れたいねえ</p>
 
 {% endblock %}
