--- a/account/templates/registration/customer_form.html
+++ b/account/templates/registration/customer_form.html
@@ -5,4 +5,4 @@
     {{form.as_table}}
     <button type="submit" class="btn btn-primary btn-block">変更</button>
 </form>
-{% endblock content %}
+{% endblock %}
