--- a/account/templates/registration/profile.html
+++ b/account/templates/registration/profile.html
@@ -37,9 +37,9 @@
         </tr>
         {% endif %}
     </tbody>
-    {% if profile_type == 'Customer' %}<a class="btn btn-outline-primary btn-sm"
+    {% if user.is_customer %}<a class="btn btn-outline-primary btn-sm"
         href="{% url 'accounts:customer_profile_update' %}">変更</a>{% endif %}
-    {% if profile_type == 'Shop' %}<a class="btn btn-outline-primary btn-sm"
+    {% if user.is_shop %}<a class="btn btn-outline-primary btn-sm"
         href="{% url 'accounts:shop_profile_update' %}">変更</a>{% endif %}
 </table>
 
