--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -6,6 +6,9 @@
     <a href="{% url 'accounts:read_qr_code' %}">スキャン</a>
 </div>
 
-<p>グラフ入れたいねえ</p>
+<div class="list-item">
+    <a href="{% url 'accounts:point_card_log' %}">ポイントカード使用履歴</a>
+</div>
+
 
 {% endblock %}
